Fix some styling, worked on mobile handler

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -3,20 +3,20 @@
 @import 'main';
 
 @media only screen and (min-width : 320px) and (max-width : 768px) {
-	#swipe-left {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 50%;
-		right: 0;
-	}
-	#swipe-right {
+	#swipe {
 		position: fixed;
 		top: 0;
 		bottom: 0;
 		left: 0;
-		right: 50%;
+		right: 0;
 	}
+	// #swipe-right {
+	// 	position: fixed;
+	// 	top: 0;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	right: 50%;
+	// }
 
 	.show-favorite {
 		position: fixed;
